export interface ExerciseEntity {
  id: number;
  name: string | null;
  description: string | null;
  targetmuscle: string | null;
  specifictargetmuscle: string | null;
}
